--- a/Project/Report/biblio.bib
+++ b/Project/Report/biblio.bib
@@ -1,4 +1,10 @@
-@misc{ stanlee,
+@misc{ Repo,
+    author = "{Isabela Constantin, Ad\élie Garin, Celia Hacker, Michael Spieler}",
+    title = "Github Repository Wikinet",
+    howpublished = "\url{https://github.com/isabelaconstantin/wikinet/tree/master/Project}",
+  }
+  
+  @misc{ stanlee,
     author = "{Wikipedia}",
     title = "Stan Lee",
     howpublished = "\url{https://en.wikipedia.org/wiki/Stan_Lee}",
