final version AC

--- a/Project/Report/biblio.bib
+++ b/Project/Report/biblio.bib
@@ -1,5 +1,5 @@
 @misc{ Repo,
-    author = "{Isabela Constantin, Ad\élie Garin, Celia Hacker, Michael Spieler}",
+    author = "{Isabela Constantin, Adelie Garin, Celia Hacker, Michael Spieler}",
     title = "Github Repository Wikinet",
     howpublished = "\url{https://github.com/isabelaconstantin/wikinet/tree/master/Project}",
   }
